--- a/app/src/main/res/layout/add_new_dialog.xml
+++ b/app/src/main/res/layout/add_new_dialog.xml
@@ -5,19 +5,6 @@
     android:background="@drawable/dialog_bg">
 
     <Button
-        android:id="@+id/colorbtn"
-        android:layout_width="290dp"
-        android:layout_height="50dp"
-        android:layout_alignEnd="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/roundedbutton_red"
-        android:shadowColor="#00F50606"
-        android:textColor="#000000"
-        android:textColorHint="#00FFFFFF"
-        android:visibility="gone" />
-
-    <Button
         android:id="@+id/textView"
         android:layout_width="290dp"
         android:layout_height="49dp"
@@ -29,6 +16,21 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp" />
 
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/baseline_settings_white_48"
+        android:shadowColor="#00F50606"
+        android:textColor="#000000"
+        android:textColorHint="#00FFFFFF"
+        android:visibility="visible" />
+
 
     <EditText
         android:id="@+id/titletext"
@@ -38,25 +40,45 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="5dp"
+        android:ems="10"
+        android:hint="title"
+        android:inputType="textCapSentences"
+        android:maxLength="29" />
+
+
+    <EditText
+        android:id="@+id/desctext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titletext"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="5dp"
         android:ems="10"
-        android:hint="Name"
-        android:inputType="textCapSentences"
-        android:maxLength="29" />
-
+        android:hint="description"
+        android:inputType="textMultiLine"
+        android:maxLength="256"
+        android:maxLines="8"
+        android:textSize="14sp" />
 
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titletext"
+        android:layout_below="@+id/desctext"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="3dp"
         android:orientation="horizontal">
 
         <EditText
